--- a/views/dashboard/showWaiterRequest.ejs
+++ b/views/dashboard/showWaiterRequest.ejs
@@ -91,7 +91,7 @@
                                         </div>
                                         <% } else { %>
                                             <div class="text-gray-400 text-sm mb-4 pb-4 border-b border-gray-100">
-                                                Not assigned
+                                                No Waiter assigned
                                             </div>
                                             <% } %>
 
